Fix issue #181, scrollbars always visible

--- a/css/editor-libs/common.css
+++ b/css/editor-libs/common.css
@@ -1,8 +1,3 @@
-html,
-.editor {
-    -ms-overflow-style: none;
-}
-
 .fade-in {
     animation: fadein .5s;
 }
